src/test/ui/issues/issue-40000.nll.stderr
error: higher-ranked subtype error
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^

error: higher-ranked subtype error
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^

error: aborting due to 2 previous errors

